--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -16,12 +16,14 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
-      - run: echo "Running the script to build the Noteflow application."
-      - uses: actions/setup-java@v3
+      - name: Set up Java 17
+        uses: actions/setup-java@v3
         with:
           distribution: 'corretto'
           java-version: '17'
-      - run: |
+      - run: echo "Running the script to build the Noteflow application."
+      - name: Build the Noteflow App using a Bash script
+        run: |
           ./buildNoteflowApp.sh
           
 
