[InMemoryCache] feat: implementing Redis endpoint and configs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 # declare a custom url for the api docs
 springdoc.api-docs.path=/api-docs
+noteflow.redis.cluster.node.ports=9081,9082,9083,9084,9085,9086
+noteflow.redis.host=localhost
