--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 # declare a custom url for the api docs
 springdoc.api-docs.path=/api-docs
-noteflow.redis.cluster.node.ports=9081,9082,9083,9084,9085,9086
-noteflow.redis.host=localhost
+noteflow.redis.cluster.node.ports=6379,6379,6379,6379,6379,6379
+noteflow.redis.host=redis-cluster-node1,\
+  redis-cluster-node2,\
+  redis-cluster-node3,\
+  redis-cluster-node4,\
+  redis-cluster-node5,\
+  redis-cluster-node6
